[gd_scene load_steps=4 format=3 uid="uid://dfgihno87pw4q"]

[ext_resource type="Script" path="res://Scene/Items/door_attic.gd" id="1_0pojl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tasiv"]
size = Vector2(306, 202)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ga8j4"]
load_path = "res://.godot/imported/circle_light.png-ea7be3356199a949fe50979ab7f1d4f4.ctex"

[node name="Door_attic" type="Sprite2D" groups=["Door_attic"]]
script = ExtResource("1_0pojl")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-14, 139)
shape = SubResource("RectangleShape2D_tasiv")
debug_color = Color(0.572549, 0.529412, 0.462745, 0.419608)

[node name="CircleLight" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.937255, 0.603922, 0, 0.207843)
show_behind_parent = true
scale = Vector2(0.025, 0.025)
texture = SubResource("CompressedTexture2D_ga8j4")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
